--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.1",
-    "@angular/cdk": "^5.1.0",
+    "@angular/cdk": "^5.2.1",
     "@angular/common": "^5.2.1",
     "@angular/compiler": "^5.2.1",
     "@angular/core": "^5.2.1",
     "@angular/forms": "^5.2.1",
     "@angular/http": "^5.2.1",
-    "@angular/material": "^5.1.0",
+    "@angular/material": "^5.2.1",
     "@angular/platform-browser": "^5.2.1",
     "@angular/platform-browser-dynamic": "^5.2.1",
     "@angular/router": "^5.2.1",
-    "@jsonforms/core": "^2.0.0-beta.6",
-    "@jsonforms/examples": "^2.0.0-beta.6",
-    "@jsonforms/material-renderers": "^2.0.0-beta.6",
+    "@jsonforms/core": "^2.0.0-rc.3",
+    "@jsonforms/examples": "^2.0.0-rc.2",
+    "@jsonforms/material-renderers": "^2.0.0-rc.3",
     "angular-in-memory-web-api": "^0.5.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^5.2.1",
     "@angular/language-service": "^5.2.1",
     "@types/jasmine": "~2.5.53",
@@ -50,6 +50,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.6.0"
   }
 }
