Updated to JSONForms RC4

--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@angular/platform-browser": "^5.2.1",
     "@angular/platform-browser-dynamic": "^5.2.1",
     "@angular/router": "^5.2.1",
-    "@jsonforms/core": "^2.0.0-rc.3",
-    "@jsonforms/examples": "^2.0.0-rc.2",
-    "@jsonforms/material-renderers": "^2.0.0-rc.3",
+    "@jsonforms/core": "^2.0.0-rc.4",
+    "@jsonforms/examples": "^2.0.0-rc.4",
+    "@jsonforms/material-renderers": "^2.0.0-rc.4",
+    "@jsonforms/webcomponent": "^2.0.0-rc.4",
     "angular-in-memory-web-api": "^0.5.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
