--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.1",
+    "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.1",
-    "@angular/common": "^5.2.1",
-    "@angular/compiler": "^5.2.1",
-    "@angular/core": "^5.2.1",
-    "@angular/forms": "^5.2.1",
-    "@angular/http": "^5.2.1",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
     "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "^5.2.1",
-    "@angular/platform-browser-dynamic": "^5.2.1",
-    "@angular/router": "^5.2.1",
-    "@jsonforms/core": "^2.0.0-rc.4",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "@jsonforms/core": "^2.0.0",
     "@jsonforms/examples": "^2.0.0-rc.4",
-    "@jsonforms/material-renderers": "^2.0.0-rc.4",
-    "@jsonforms/webcomponent": "^2.0.0-rc.4",
-    "angular-in-memory-web-api": "^0.5.2",
+    "@jsonforms/material-renderers": "^2.0.0",
+    "@jsonforms/webcomponent": "^2.0.0",
+    "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
+    "rxjs": "^5.5.7",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.2.1",
-    "@angular/language-service": "^5.2.1",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/language-service": "^5.2.9",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.102",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
