--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
-    "@jsonforms/core": "^2.0.7",
-    "@jsonforms/examples": "^2.0.7",
-    "@jsonforms/material-renderers": "^2.0.7",
-    "@jsonforms/webcomponent": "^2.0.7",
+    "@jsonforms/core": "2.0.8",
+    "@jsonforms/examples": "2.0.8",
+    "@jsonforms/material-renderers": "2.0.8",
+    "@jsonforms/webcomponent": "2.0.8",
     "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.7",
@@ -42,7 +42,7 @@
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^2.0.5",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.3",
