--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^7.1.1",
     "@angular/animations": "^5.2.10",
     "@angular/cdk": "^5.2.1",
     "@angular/common": "^5.2.10",
@@ -23,17 +24,19 @@
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
-    "@jsonforms/core": "2.0.8",
-    "@jsonforms/examples": "2.0.8",
-    "@jsonforms/material-renderers": "2.0.8",
-    "@jsonforms/webcomponent": "2.0.8",
+    "@jsonforms/angular": "^2.0.12",
+    "@jsonforms/angular-material": "^2.0.12",
+    "@jsonforms/core": "^2.0.12",
+    "@jsonforms/examples": "^2.0.12",
     "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.7",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "^7.1.2",
     "@angular/compiler-cli": "^5.2.10",
     "@angular/language-service": "^5.2.10",
     "@types/jasmine": "~2.5.53",
