--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "^7.1.2",
     "@angular/compiler-cli": "^5.2.10",
     "@angular/language-service": "^5.2.10",
