Fix Production Build problems
* this fix needs https://github.com/eclipsesource/jsonforms/pull/1233

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,10 +4,12 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
-    "types": []
+    "types": [],
+    "paths": {"@jsonforms/*": ["../node_modules/@jsonforms/*"]}
   },
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  
 }
