--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "@angular/common": "^5.2.10",
     "@angular/compiler": "^5.2.10",
     "@angular/core": "^5.2.10",
+    "@angular/flex-layout": "^5.0.0-beta.15",
     "@angular/forms": "^5.2.10",
     "@angular/http": "^5.2.10",
     "@angular/material": "^5.2.1",
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
-    "@jsonforms/angular": "^2.0.12",
-    "@jsonforms/angular-material": "^2.0.12",
-    "@jsonforms/core": "^2.0.12",
-    "@jsonforms/examples": "^2.0.12",
+    "@jsonforms/angular": "^2.2.0",
+    "@jsonforms/angular-material": "^2.2.0",
+    "@jsonforms/core": "^2.2.0",
+    "@jsonforms/examples": "^2.2.0",
     "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.7",
@@ -54,6 +55,6 @@
     "protractor": "^5.4.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.6.0"
+    "typescript": "~2.7.0"
   }
 }
