Update to 2.3.0 & other deps
* Add `LocaleValidation` and `Translation` moduels to imports
* Add `json-schema-ref-parser` to `paths` in order to use version
  from `dist` folder instead of using the one from `dist` which
  has node dependencies

--- a/package.json
+++ b/package.json
@@ -12,41 +12,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "^7.1.1",
-    "@angular/animations": "^5.2.10",
-    "@angular/cdk": "^5.2.1",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/flex-layout": "^5.0.0-beta.15",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
-    "@jsonforms/angular": "^2.2.0",
-    "@jsonforms/angular-material": "^2.2.0",
-    "@jsonforms/core": "^2.2.0",
-    "@jsonforms/examples": "^2.2.0",
+    "@angular-redux/store": "^9.0.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@jsonforms/angular": "^2.3.0",
+    "@jsonforms/angular-material": "^2.3.0",
+    "@jsonforms/core": "^2.3.0",
+    "@jsonforms/examples": "^2.3.0",
     "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.7",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.8.20"
+    "redux": "4.0.1",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
+    "tslib": "^1.10.0",
+    "zone.js": "^0.10.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.1",
-    "@angular/cli": "^7.1.2",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/language-service": "^5.2.10",
-    "@types/jasmine": "~2.5.53",
+    "@angular-devkit/build-angular": "^0.12.4",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.102",
+    "@types/node": "12.7.1",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^3.0.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.3",
@@ -55,6 +57,6 @@
     "protractor": "^5.4.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.7.0"
+    "typescript": "~3.2.0"
   }
 }
